idf_component_register(SRC_DIRS "LEAF/leaf/Src"
                    INCLUDE_DIRS "LEAF/leaf")

# project(esp32-LEAF)
# add_subdirectory(LEAF)

# add_compile_options("-Wno-unused-variable -Wno-ignored-qualifiers -Wno-incompatible-pointer-types -Wno-missing-field-initializers -Wno-unused-but-set-variable")

ADD_DEFINITIONS("-Wno-unused-variable -Wno-ignored-qualifiers -Wno-incompatible-pointer-types -Wno-missing-field-initializers -Wno-unused-but-set-variable")

