idf_component_register(SRC_DIRS "LEAF/leaf/Src"
                    INCLUDE_DIRS "LEAF/leaf" "LEAF/leaf/Inc")

# project(esp32-LEAF)
# add_subdirectory(LEAF)

ADD_DEFINITIONS("-Wno-unused-variable -Wno-ignored-qualifiers -Wno-incompatible-pointer-types -Wno-missing-field-initializers -Wno-unused-but-set-variable")

